app/assets/stylesheets/template/_header-footer.css.scss
.site-header,
.site-footer {
  color: $c-text-caption;
  @include spacing(padding-left padding-right);
  a { @include blue-link { color: $c-text-caption; } }
}

.site-header { margin-bottom: 3.5em; border-bottom: divider(); }
.site-footer { margin-top: 2.5em; }

.site-header a,
.site-footer {
  @include padding-v(1em);
}

.site-header a {
  display: inline-block;
}

.site-header nav {
  position: relative;
  font-weight: weight(medium);
  overflow: visible;

  li + li {
    margin-left: 0.5em;
  }

  a {
    padding-left: 1em;
    padding-right: 1em;
    border-left: solid 1px transparent;
    border-right: solid 1px transparent;
  }

  a.current {
    color: black;
    font-weight: weight(medium);
    border-left: divider();
    border-right: divider();
    position: relative;
    &:after {
      content: "";
      width: 100%;
      height: 1px;
      position: absolute;
      left: 0;
      bottom: -1px;
      background: white;
    }
  }
}

